--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,46 +6,30 @@ on:
   pull_request:
     branches: [main]
 
+# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Cache node_modules
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-modules-${{ hashFiles('package-lock.json') }}
-
-      - name: Setup Node
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-
+          cache: "npm"
       - name: Install dependencies
         run: npm ci
-
-      - name: Build project
-        run: npm run build
-
-      - uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./dist
-
-  deploy:
-    needs: build
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: ${{ github.event_name == 'pull_request' && 'preview' || 'github-pages' }}
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
       - name: Deploy
-        id: deployment
-        uses: actions/deploy-pages@v4
-        with:
-          preview: ${{ github.event_name == 'pull_request' && true || false }}
+        run: npm run deploy
+        env:
+          XMIT_KEY: ${{ secrets.XMIT_KEY }}
